update languages, create rake language update task

--- a/config/locales/el.yml
+++ b/config/locales/el.yml
@@ -6,6 +6,9 @@ el:
   errors:
     messages:
       email: "Μη έγκυρη ηλεκτρονική διεύθυνση"
+  attachment:
+    error:
+      too_large: "Το αρχείο που προσπαθήσατε να επισυνάψετε είναι μεγαλύτερο από 50MB, παρακαλούμε επιλέξτε ένα μικρότερο αρχείο."
   time:
     formats:
       for_today: '%l:%M %P'
@@ -63,6 +66,22 @@ el:
     settings_updated: "Οι ρυθμίσεις σας έχουν ενημερωθεί."
     user_made_admin: "Ο/Η %{which_user} έχει γίνει συντονιστής."
     you_have_left_group: "Αφαιρεθήκατε από το %{which_group}."
+    comment_deleted: "Σχόλιο διαγράφτηκε."
+    invitations:
+      auto_added:
+        one: "%{count} μέλος προστέθηκε"
+        other: "%{count} μέλη προστέθηκαν"
+      existing_member:
+        one: "%{count} μέλους είναι ήδη στην ομάδα"
+        other: "%{count} μελών είναι ήδη στην ομάδα"
+      sent:
+        one: "%{count} πρόσκληση στάλθηκε"
+        other: "%{count} προσκλήσεις στάλθηκαν"
+      auto_added_and_sent: "%{auto_added_text} και %{sent_text}"
+  views:
+    pagination:
+      previous: "Προηγούμενο"
+      next: "Επόμενο"
   warning:
     cant_remove_last_admin: "Είστε ο τελευταίος συντονιστής και δεν μπορείτε να αφαιρεθείτε."
     membership_request_already_approved: "Η αίτηση μέλους έχει ήδη εγκριθεί."
@@ -211,6 +230,7 @@ el:
   membership_requested: "Αίτηση μέλους έχει ζητηθεί."
   request_membership: "Αίτηση για μέλος"
   confirm_remove_membership_request: "Είστε σίγουροι πως επιθυμείτε να αποσύρετε την αίτηση μέλους για αυτήν την ομάδα?"
+  no_pending_membership_requests: "Δεν υπάρχουν τωρινές αιτήσεις μελών σε αναμονή για αυτή την ομάδα."
   subgroups: "Υπο-ομάδες"
   create_a_subgroup: "Δημιουργήστε μια υπο-ομάδα"
   select_members_to_add: "Επιλέξτε μέλη για να προσθέσετε στην ομάδα %{which_group}"
@@ -305,14 +325,23 @@ el:
   not_voted: "[Δείξε τα μέλη που δεν έχουν αποφασίσει ακόμα]"
   outcome: "Αποτέλεσμα"
   outcome_placeholder: "Ποιό ήταν το αποτέλεσμα αυτής της πρότασης?"
+  position_verbs:
+    'yes': "Συμφωνώ"
+    'no': "Διαφωνώ"
+    abstain: "Απέχω"
+    block: "Μπλοκάρω"
+    past_tense:
+      'yes': "Συμφώνησα"
+      'no': "Διαφώνησα"
+      abstain: "Απείχα"
+      block: "Μπλοκάρισα"
   help:
     coordinating: 'Συντονίζοντας την Loomio ομάδα σας'
-    coordinating_details: "Ως Συντονιστής, είστε υπεύθυνος για την ρύθμιση της Loomio ομάδας σας και καλώντας \nτον καθένα μέσα. Όπως και να μάθετε πως να χρησιμοποιείται ένα νέο κομμάτι του λογισμικού, η ομάδα σας θα\nμαθαίνει νέες διαδικασίες για να συνεργάζονται πιο αποτελεσματικά και να πραγματοποιούν καλές αποφάσεις\nμαζί. Εδώ είναι μερικές συμβουλές\
-      \ για να υποστηρίξετε την ομάδα σας να πετύχει:\n"
+    coordinating_details: "Ως Συντονιστής, είστε υπεύθυνος για την ρύθμιση της Loomio ομάδας σας και καλώντας \nτον καθένα μέσα. Όπως και να μάθετε πως να χρησιμοποιείται ένα νέο κομμάτι του λογισμικού, η ομάδα σας θα\nμαθαίνει νέες διαδικασίες για να συνεργάζονται πιο αποτελεσματικά και να πραγματοποιούν καλές αποφάσεις\nμαζί. Εδώ είναι μερικές συμβουλές για να υποστηρίξετε την ομάδα σας να πετύχει:\n"
     different_ways: 'Διάφοροι τρόποι να χρησιμοποιήσετε το Loomio'
-    engaging_html: "<h2>Συμβουλές για να συμμετάσχει η ομάδα σας</h2>\n\n<p>Οι άνθρωποι θα είναι ενθουσιασμένοι να έρχονται και να ξεκινήσουν να συμμετάσχουν όταν υπάρχει συμμετοχική\nπρόταση στο τραπέζι. Μια καλή πρόταση συμπεριλαμβάνει σχέδιο δράσης για την ομάδα, έτσι ώστε\nείναι αμέσως προφανές τι σημαίνει να συμφωνείς ή να διαφωνείς. Σκεφτείτε για\
-      \ το πως\nμπορείτε να προσδιορίσετε τις συζητήσεις/αποφάσεις που η ομάδα σας αναλαμβάνει αυτοπροσώπως ή με \nηλεκτρονικό ταχυδρομείο θα μπορούσε να είναι πιο εύκολο εάν ήταν στο Loomio.</p>\n<p> Εάν η ομάδα σας ξεκινάει, θα μπορούσατε να ξεκινήσετε με μια ανάλαφρη απόφαση, να δώσετε\nστον καθένα ευκαιρία να παίξει με το εργαλείο και να δει την διαδικασία\
-      \ λήψης αποφάσεων στην δράση.</p>\n<p>Άλλος απλός τρόπος είναι να ενθαρύνετε τους ανθρώπους να εμπλακούν σε μια συζήτηση χρησιμοποιώντας την @αναφορά \nχαρακτηριστικό ώστε να παρακινήσει συγκεκριμένα άτομα; αυτό θα στείλει κατευθείαν ηλεκτρονικό μήνυμα για να τους πει ότι έχουν\nαναφερθεί σε σχόλιο.</p>\n"
+    engaging_html: "<h2>Συμβουλές για να συμμετάσχει η ομάδα σας</h2>\n\n<p>Οι άνθρωποι θα είναι ενθουσιασμένοι να έρχονται και να ξεκινήσουν να συμμετάσχουν όταν υπάρχει συμμετοχική\nπρόταση στο τραπέζι. Μια καλή πρόταση συμπεριλαμβάνει σχέδιο δράσης για την ομάδα, έτσι ώστε\nείναι αμέσως προφανές τι σημαίνει να συμφωνείς ή να διαφωνείς. Σκεφτείτε για το πως\nμπορείτε να προσδιορίσετε τις συζητήσεις/αποφάσεις που η ομάδα σας αναλαμβάνει αυτοπροσώπως ή με \nηλεκτρονικό\
+      \ ταχυδρομείο θα μπορούσε να είναι πιο εύκολο εάν ήταν στο Loomio.</p>\n<p> Εάν η ομάδα σας ξεκινάει, θα μπορούσατε να ξεκινήσετε με μια ανάλαφρη απόφαση, να δώσετε\nστον καθένα ευκαιρία να παίξει με το εργαλείο και να δει την διαδικασία λήψης αποφάσεων στην δράση.</p>\n<p>Άλλος απλός τρόπος είναι να ενθαρύνετε τους ανθρώπους να εμπλακούν σε μια συζήτηση χρησιμοποιώντας την @αναφορά \nχαρακτηριστικό ώστε να παρακινήσει συγκεκριμένα άτομα; αυτό θα στείλει κατευθείαν\
+      \ ηλεκτρονικό μήνυμα για να τους πει ότι έχουν\nαναφερθεί σε σχόλιο.</p>\n"
     example1_html: |
       <h3>Η ομάδα χρειάζεται να συζητήσει ένα ευρύ θέμα και να αναπτύξουν μια λύση από κοινού</h3>
       <p>Στρατηγική: Συζητήστε ένα θέμα πριν δημιουργήστε μια πρόταση.</p>
@@ -326,7 +355,7 @@ el:
       μπορείτε να χρησιμοποιήσετε την πρόταση για να παρθεί γρήγορα απόφαση.</p>
       <p>Μπορείτε να κάνετε πράγματα όπως να τελειώσετε ένα κείμενο, να εγκρίνετε μια εφαρμογή, ή να υπογράψετε ένα κομμάτι δουλειάς.</p>
     get_in_touch: "Μείνετε συντονισμένοι"
-    get_in_touch_description_html: "Εάν έχετε κάποιες ερωτήσεις ή σχόλια στείλτε μας ηλεκτρονικό μήνυμα στο:  <a href='mailto:contact@loomio.org'>contact@loomio.org</a>"
+    get_in_touch_description_html: "Εάν έχετε κάποιες ερωτήσεις ή σχόλια, συμπληρώστε αυτή τη <a href='%{link}'>φόρμα</a> ή στείλτε μας ηλεκτρονικό μήνυμα στο <a href='mailto:contact@loomio.org'>contact@loomio.org</a>."
     getting_started: "Ξεκινώντας"
     getting_started_description: "Στα αριστερά, η ομάδα συζητάει ένα θέμα, ανταλλάζει ιδέες και πληροφορίες. Όταν υπάρχει μια απόφαση που πρέπει να κάνει η ομάδα, έρχεται στα δεξιά."
     getting_the_most: 'Παίρνοντας τα περισσότερα από το Loomio'
@@ -374,12 +403,11 @@ el:
     positions_disagree_description: "<span>Διαφωνώ</span> σημαίνει πως πιθανώς υπάρχει καλύτερη εναλλακτική, αλλά θα συμφιλιωθείτε με την απόφαση της ομάδας."
     positions_block_description: "<span>Μπλοκάρισμα</span> σημαίνει πως έχετε πολύ σοβαρές ενστάσεις και θα είσαστε δυστυχισμένος έτσι και αυτή η πρόταση προχωρήσει."
     start_discussion: "Ξεκινήστε μια ενδιαφέρουσα συζήτηση"
-    start_discussion_html: "<p>Όταν ξεκινάτε μια συζήτηση, βεβαιωθείτε ότι ο τίτλος εκφράζει το θέμα συνοπτικά.\nΧρησιμοποιήστε τον Πίνακα Περιεχομένου για να δώσετε όλες τις απαραίτητες πληροφορίες που χρειάζονται ώστε\nη ομάδα να έχει μια παραγωγική και τεκμηριωμένη συζήτηση.</p>\n<p>Κατά την διάρκεια της συζήτησης, ο Πίνακας περιεχομένου μπορεί να\
-      \ ενημερωθεί όσο έρχονται\nνέες πληροφορίες. Καθώς και για την αποσαφήνιση του θέματος, μπορείτε να χρησιμοποιήσετε αυτόν τον χώρο \nδιαμοιράζοντας τους πόρους, συνοψίζοντας την συζήτηση όσο εξελίσσεται, η να περιγράφεται τα\nπρωτόκολλα λήψης αποφάσεων που χρησιμοποιεί η ομάδα σας.</p>\n"
+    start_discussion_html: "<p>Όταν ξεκινάτε μια συζήτηση, βεβαιωθείτε ότι ο τίτλος εκφράζει το θέμα συνοπτικά.\nΧρησιμοποιήστε τον Πίνακα Περιεχομένου για να δώσετε όλες τις απαραίτητες πληροφορίες που χρειάζονται ώστε\nη ομάδα να έχει μια παραγωγική και τεκμηριωμένη συζήτηση.</p>\n<p>Κατά την διάρκεια της συζήτησης, ο Πίνακας περιεχομένου μπορεί να ενημερωθεί όσο έρχονται\nνέες πληροφορίες. Καθώς και για την αποσαφήνιση του θέματος, μπορείτε να χρησιμοποιήσετε αυτόν\
+      \ τον χώρο \nδιαμοιράζοντας τους πόρους, συνοψίζοντας την συζήτηση όσο εξελίσσεται, η να περιγράφεται τα\nπρωτόκολλα λήψης αποφάσεων που χρησιμοποιεί η ομάδα σας.</p>\n"
     start_proposal: "Γράψτε μια καθαρή πρόταση"
-    start_proposal_html: "<p> Εάν κάνετε τον τίτλο σαφή και συνοπτικό, οι άνθρωποι θα γνωρίζουν άμεσα \nεάν συμφωνούν ή διαφωνούν με το θέμα.</p>\n<p>Δεν είναι το τέλος του κόσμου εάν μια πρόταση δεν πάρει ξεκάθαρη συμφωνία άμεσα.\nΕάν η ομάδα δεν της αρέσει η πρώτη πρόταση, οποιοσδήποτε μπορεί να ξεκινήσει μια νέα πρόταση για\nνα αντιμετωπιστούν οι ανησυχίες\
-      \ που εκφράστηκαν, και να συνεχίσει η διαδικασία για να προχωρήσει εμπρός το θέμα.</p>\n<p>Διαμέσου αυτής της δυναμικής διαδικασίας, η συλλογική σοφίας της ομάδας μπορεί να δημιουργήσει καλύτερες\nιδέες από οποιονδήποτε άλλον έρθει με τις δικές του.</p>\n<p>Η προθεσμία σε μια πρόταση μπορεί να επεκταθεί ανά πάσα στιγμή, αν φαίνεται ότι μια απόφαση\
-      \ \nχρειάζεται λίγο περισσότερο χρόνο. Όλοι θα παίρνουν ειδοποίηση μέσω μηνύματος ηλεκτρονικού ταχυδρομείου 24 ώρες πριν κλείσει μια πρόταση.</p>\n"
+    start_proposal_html: "<p> Εάν κάνετε τον τίτλο σαφή και συνοπτικό, οι άνθρωποι θα γνωρίζουν άμεσα \nεάν συμφωνούν ή διαφωνούν με το θέμα.</p>\n<p>Δεν είναι το τέλος του κόσμου εάν μια πρόταση δεν πάρει ξεκάθαρη συμφωνία άμεσα.\nΕάν η ομάδα δεν της αρέσει η πρώτη πρόταση, οποιοσδήποτε μπορεί να ξεκινήσει μια νέα πρόταση για\nνα αντιμετωπιστούν οι ανησυχίες που εκφράστηκαν, και να συνεχίσει η διαδικασία για να προχωρήσει εμπρός το θέμα.</p>\n<p>Διαμέσου αυτής της δυναμικής\
+      \ διαδικασίας, η συλλογική σοφίας της ομάδας μπορεί να δημιουργήσει καλύτερες\nιδέες από οποιονδήποτε άλλον έρθει με τις δικές του.</p>\n<p>Η προθεσμία σε μια πρόταση μπορεί να επεκταθεί ανά πάσα στιγμή, αν φαίνεται ότι μια απόφαση \nχρειάζεται λίγο περισσότερο χρόνο. Όλοι θα παίρνουν ειδοποίηση μέσω μηνύματος ηλεκτρονικού ταχυδρομείου 24 ώρες πριν κλείσει μια πρόταση.</p>\n"
     video_id: "52025402"
     video_tutorial: "Εκμάθηση μέσω βίντεο"
     video_tutorial_description: "Ελέγξτε το νέο βίντεο για μια γρήγορη επίδειξη πως να χρησιμοποιείται το loomio."
@@ -390,6 +418,11 @@ el:
     proposal: 'Συμβουλές για να γράψετε καθαρά μια πρόταση'
     vote: 'Μπορείτε να αλλάξετε την θέση σας ανά πάσα στιγμή'
   pricing_page:
+    intro: |
+      Οι ομάδες με προϋπολογισμό πληρώνουν μια συνδρομή για να χρησιμοποιήσουν το εργαλείο.
+
+      Οι ομάδες χωρίς τα μέσα για να πληρώσουν μια συνδρομή χρησιμοποιούν
+      το μοντέλο "Πληρώστε ότι μπορείτε": τα μέλη της προσκαλούνται να κάνουν μια εθελοντική συνεισφορά. Η συνεισφορά σας σημαίνει ότι μπορούμε να κρατήσουμε το Loomio ανεξάρτητο, δωρεάν από διαφημίσεις και καθοδηγούμενο από την κοινότητα μας.
     organisations: Οργανισμοί
     organisations_examples: π.χ. εταιρίες, κυβερνητικές υπηρεσίες, οργανώσεις της κοινότητας
     informal_groups: Άτυπες Ομάδες
@@ -403,9 +436,6 @@ el:
     submit: Συνεισφορά
     tooltip: Μάθετε σχετικά με το μοντέλο χρηματοδότησης της κοινωνίας μας
     thought_about_contributing: Η ευκαιρία για να συμμετάσχετε
-    thought_about_contributing_description: "Το Loomio είναι μια συλλογική κοινωνική επιχείρηση που εργάζονται ώστε να είναι εύκολο για τον καθένα να συμμετέχει στη λήψη αποφάσεων που τους αφορούν.\n\nΤα χρήματα δεν θα πρέπει να αποτελούν εμπόδιο για τη συλλογική λήψη αποφάσεων. Το Loomio χρηματοδοτείται από τις συνεισφορές από την κοινότητά μας των χρηστών,\
-      \ καθώς και από συνδρομές που καταβάλλονται από τις επίσημες οργανώσεις που το χρησιμοποιούν. \n\nΗ ομάδα σας δεν πληρώνει συνδρομή, οπότε αυτή είναι η ευκαιρία σας για να συνεισφέρετε. Η συμβολή σας σημαίνει ότι μπορεί να κρατήσει το Loomio ανεξάρτητο, χωρίς διαφημίσεις, και ελεύθερα διαθέσιμο σε κοινοτικές ομάδες όπως η δική σας. \n\nΕυχαριστούμε\
-      \ για την πραγματοποίηση του! \n"
     thank_you_title: Ευχαριστούμε για την συνεισφορά σας στο Loomio!
     thank_you_body: |
       Η συνεισφορά σας μας βοηθάει να παραδώσουμε εύκολα συλλογική λήψη αποφάσεων στον κόσμο.
@@ -520,6 +550,7 @@ el:
     upload_new_image: "Ανεβάστε νέα εικόνα"
   group_setup:
     desc_header: "Σχεδόν τελειώσατε!"
+    desc_html: "Ως συντονιστής της ομάδας, είστε υπεύθυνος για να ρυθμίσετε και να διαχειριστείτε την ομάδα σας στο Loomio. Έπειτα εφ όσον επιλέξετε μερικές ρυθμίσεις, μπορείτε να μπείτε στην νέα σας ομάδα, να ξεκινήσετε μια συζήτηση ή δύο, και να στείλετε κάποιες προσκλήσεις!  <p>Όταν σκέφτεστε το πιο απλό τρόπο για να περιγράψετε την ομάδα σας, ρωτήστε τον εαυτό σας: Τι θέλετε να πετύχετε μαζί? Τι είδος αποφάσεις θέλετε να λαμβάνετε? Ποιός θα εμπλέκεται?</p>"
     submit: "Πήγαινε με στην ομάδα μου!"
   simple_form:
     'yes': 'Ναι'
@@ -543,6 +574,7 @@ el:
       motion:
         name: "Τίτλος"
         description: "Λεπτομέρειες"
+        close_at_date: "Κλείνει"
       user:
         name: "Πλήρες Όνοματεπώνυμο"
         email: "Ηλεκτρονική Διεύθυνση"
@@ -568,7 +600,10 @@ el:
         name: "Ποια είναι η δικιά σας προτεινόμενη πορεία δράσης?"
         description: "Δώστε αρκετές πληροφορίες ώστε ο καθένας να γνωρίζει ακριβώς τι σημαίνει να συμφωνεί ή να διαφωνεί."
       group:
-        description: "Δώστε μια περιγραφή της ομάδα σας:"
+        description: "Σκέψου με τον πιο απλό τρόπο για να περιγράψεις την ομάδα σου: Τι θέλετε να πετύχετε μαζί? Τι είδους αποφάσεις θέλετε να κάνετε? Ποιος θα εμπλέκεται?"
+      user:
+        email: "Ηλεκτρονική Διεύθυνση"
+        password: "Κωδικός"
   helpers:
     submit:
       discussion:
@@ -579,6 +614,9 @@ el:
         create: "Δημιουργήστε ένα λογαριασμό"
         update: "Ενημέρωση ρυθμίσεων"
   email:
+    added_to_a_group:
+      subject: "Έχετε προστεθεί στην ομάδα"
+      content: "Συγχαρητήρια, έχετε προστεθεί στην ομάδα '%{which}' στο Loomio!"
     unsubscribe: "Διαγραφείτε ή αλλάξτε τις ρυθμίσεις του ηλεκτρονικού ταχυδρομείου:"
     unsubscribe_html: "<a href='%{link_path}'>%{link_text}</a> για να διαγραφείτε ή για να αλλάξετε τις ρυθμίσεις ηλεκτρονικού ταχυδρομείου."
     view_comment: "Πατήστε εδώ για να δείτε το σχόλιο στο Loomio"
@@ -676,6 +714,7 @@ el:
   groups: "Ομάδες"
   group_admin: "Συντονιστής Ομάδας"
   home: "Κεντρική "
+  id: "id"
   like: "Αρέσει"
   loading: "Φορτώνει..."
   message: "Μήνυμα"
