update languages, promote catalan to an experimental language

--- a/config/locales/el.yml
+++ b/config/locales/el.yml
@@ -436,6 +436,8 @@ el:
     submit: Συνεισφορά
     tooltip: Μάθετε σχετικά με το μοντέλο χρηματοδότησης της κοινωνίας μας
     thought_about_contributing: Η ευκαιρία για να συμμετάσχετε
+    thought_about_contributing_description: "Το Loomio είναι μια συλλογική κοινωνική επιχείρηση που εργάζεται ώστε να είναι εύκολο για τον καθένα να συμμετέχει στη λήψη αποφάσεων που τον αφορούν.\n\nΤα χρήματα δεν θα πρέπει να αποτελούν εμπόδιο για τη συλλογική λήψη αποφάσεων. Το Loomio χρηματοδοτείται από τις συνεισφορές από την κοινότητά μας των χρηστών, καθώς και από συνδρομές που καταβάλλονται από τις επίσημες οργανώσεις που το χρησιμοποιούν. \n\nΗ συνεισφορά σας σημαίνει\
+      \ ότι μπορούμε να κρατήσουμε το Loomio ανεξάρτητο, χωρίς διαφημίσεις, και ελεύθερα διαθέσιμο σε κοινοτικές ομάδες όπως η δική σας. \n\nΕυχαριστούμε για την πραγματοποίηση του! \n"
     thank_you_title: Ευχαριστούμε για την συνεισφορά σας στο Loomio!
     thank_you_body: |
       Η συνεισφορά σας μας βοηθάει να παραδώσουμε εύκολα συλλογική λήψη αποφάσεων στον κόσμο.
