--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -560,7 +560,7 @@ en:
   #
   # SIGN IN
   #
-
+  persona_validation_failed: "Persona verification failed. Please try again"
   resend_confirmation: "Resend confirmation instructions"
   new_password: "New password"
   confirm_new_password: "Confirm new password"
