--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -22,9 +22,9 @@ en:
       timeout: 'Your session expired, please sign in again to continue.'
       inactive: 'Your account was not activated yet.'
     sessions:
-      sign_in: 'Sign in'
-      signed_in: 'Signed in successfully.'
-      signed_out: 'Signed out successfully.'
+      sign_in: 'Log in'
+      signed_in: 'Logged in successfully.'
+      signed_out: 'Logged out successfully.'
     passwords:
       send_instructions: 'You will receive an email with instructions about how to reset your password in a few minutes.'
       updated: 'Your password was changed successfully. You are now signed in.'
