update language files

--- a/config/locales/el.yml
+++ b/config/locales/el.yml
@@ -162,6 +162,7 @@ el:
     comment_liked: "άρεσε το σχόλιο σας στην συζήτηση"
     user_mentioned: "σας ανεφέραν σε ένα σχόλιο στην/στον"
     membership_requested: "έχει αιτηθεί για μέλος στο"
+    membership_request_approved: 'το αίτημα σας για να συμμετάσχετε εγκρίθηκε'
     user_added_to_group: "προστεθήκατε στην ομάδα"
     motion_closing_soon: "Η πρόταση κλείνει σύντομα"
     motion_blocked: "μπλόκαρε την πρόταση"
@@ -252,7 +253,6 @@ el:
   start_a_discussion: "Ξεκινήστε μια συζήτηση"
   group_description: "Περιγραφή ομάδας"
   edit_group_description: "Επεξεργασία περιγραφής ομάδας"
-  payment_details_link: "Πληροφορίες πληρωμών"
   group_request:
     confirmation:
       title: Σχεδόν τελειώσατε! Ελέγξτε το ηλεκτρονικό ταχυδρομείο σας.
@@ -355,7 +355,7 @@ el:
       μπορείτε να χρησιμοποιήσετε την πρόταση για να παρθεί γρήγορα απόφαση.</p>
       <p>Μπορείτε να κάνετε πράγματα όπως να τελειώσετε ένα κείμενο, να εγκρίνετε μια εφαρμογή, ή να υπογράψετε ένα κομμάτι δουλειάς.</p>
     get_in_touch: "Μείνετε συντονισμένοι"
-    get_in_touch_description_html: "Εάν έχετε κάποιες ερωτήσεις ή σχόλια, συμπληρώστε αυτή τη <a href='%{link}'>φόρμα</a> ή στείλτε μας ηλεκτρονικό μήνυμα στο <a href='mailto:contact@loomio.org'>contact@loomio.org</a>."
+    get_in_touch_description_html: "Εάν έχετε οποιεσδήποτε ερωτήσεις ή σχόλια, <a href='%{link}'>ρίξτε μας μια γραμμή</a>."
     getting_started: "Ξεκινώντας"
     getting_started_description: "Στα αριστερά, η ομάδα συζητάει ένα θέμα, ανταλλάζει ιδέες και πληροφορίες. Όταν υπάρχει μια απόφαση που πρέπει να κάνει η ομάδα, έρχεται στα δεξιά."
     getting_the_most: 'Παίρνοντας τα περισσότερα από το Loomio'
@@ -436,8 +436,6 @@ el:
     submit: Συνεισφορά
     tooltip: Μάθετε σχετικά με το μοντέλο χρηματοδότησης της κοινωνίας μας
     thought_about_contributing: Η ευκαιρία για να συμμετάσχετε
-    thought_about_contributing_description: "Το Loomio είναι μια συλλογική κοινωνική επιχείρηση που εργάζεται ώστε να είναι εύκολο για τον καθένα να συμμετέχει στη λήψη αποφάσεων που τον αφορούν.\n\nΤα χρήματα δεν θα πρέπει να αποτελούν εμπόδιο για τη συλλογική λήψη αποφάσεων. Το Loomio χρηματοδοτείται από τις συνεισφορές από την κοινότητά μας των χρηστών, καθώς και από συνδρομές που καταβάλλονται από τις επίσημες οργανώσεις που το χρησιμοποιούν. \n\nΗ συνεισφορά σας σημαίνει\
-      \ ότι μπορούμε να κρατήσουμε το Loomio ανεξάρτητο, χωρίς διαφημίσεις, και ελεύθερα διαθέσιμο σε κοινοτικές ομάδες όπως η δική σας. \n\nΕυχαριστούμε για την πραγματοποίηση του! \n"
     thank_you_title: Ευχαριστούμε για την συνεισφορά σας στο Loomio!
     thank_you_body: |
       Η συνεισφορά σας μας βοηθάει να παραδώσουμε εύκολα συλλογική λήψη αποφάσεων στον κόσμο.
@@ -448,12 +446,6 @@ el:
 
       <a href='https://www.loomio.org/groups/3'>Πήγαινε με στην κοινότητα του Loomio</a>
     making_a_donation: Κάνοντας μια δωρεά
-    making_a_donation_description: |
-      Το Loomio είναι ένα μια συλλογική κοινωνική επιχείρηση που εργάζεται ώστε να κάνει εύκολο για οποιονδήποτε να συμμετάσχει σε αποφάσεις που τον αφορούν.
-
-      Η συνεισφορά σας σημαίνει ότι μπορούμε να κρατήσουμε το Loomio ανεξάρτητο, δωρεάν από διαφημίσεις, και καθοδηγούμενο από την κοινότητα των χρηστών μας.
-
-      Ευχαριστούμε που το κάνετε αυτό δυνατόν!
   resend_confirmation: "Επαναποστολή οδηγιών επιβεβαιώσης"
   new_password: "Νέος Κωδικός"
   confirm_new_password: "Επιβεβαίωση νέου κωδικού"
