Improve public-groups index
commit ca9b93220c1c0aeb4fc5a2fc6480cbafd6e8dbfc
Author: Hannah Salmon <hr.salmon@gmail.com>
Date:   Thu Oct 17 12:43:39 2013 +1300

    Fix CSS

commit 8cdd80cfddc56b92d40bf2c7ebc43c1ae38f1472
Author: Hannah Salmon <hr.salmon@gmail.com>
Date:   Thu Oct 17 10:48:19 2013 +1300

    Implement suggested changes

commit 47fae553e252aeef27f4902ef82ae80f749af064
Author: john irving <whimful@gmail.com>
Date:   Wed Oct 16 14:23:42 2013 +1300

    css fixup yo

commit 1212166874eec059245e259a7aac016026bc0792
Author: john irving <whimful@gmail.com>
Date:   Wed Oct 16 13:39:29 2013 +1300

    tidy up schema

commit 88a768f22505ed962f6045b8c9cc59a57bbf5cb2
Merge: 3f23ca6 45f2fed
Author: john irving <whimful@gmail.com>
Date:   Wed Oct 16 13:37:58 2013 +1300

    Merge branch 'master' of github.com:loomio/loomio into feature/public-groups-ordered-by-name

commit 3f23ca6a8c7e2d558beed2d19bdc66643fb1438c
Author: john irving <whimful@gmail.com>
Date:   Wed Oct 16 13:37:48 2013 +1300

    schema add

commit d3d0ed900b0442512baa3d7ece62e7da5c2ca6cd
Author: Hannah Salmon <hr.salmon@gmail.com>
Date:   Tue Oct 15 15:44:28 2013 +1300

    Improve sort functionality

commit 4f3b624ca6256452a07ff45e0dec03e7d3f4e82f
Author: Hannah Salmon <hr.salmon@gmail.com>
Date:   Fri Oct 11 17:09:03 2013 +1300

    add sort functionality

commit 082cf4a1530a1f0cef1b58b70101d17e9601ce61
Author: Hannah Salmon <hr.salmon@gmail.com>
Date:   Thu Oct 10 16:33:05 2013 +1300

    Add links, styling

commit 8cfe8378614ebb28884a92d73d140136aa465f2f
Author: Hannah Salmon <hr.salmon@gmail.com>
Date:   Wed Oct 9 17:34:56 2013 +1300

    Add sort_by number of members

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -871,6 +871,7 @@ en:
   group: "Group"
   groups: "Groups"
   group_admin: "Group Coordinator"
+  group_name: "Group name"
   home: "Home"
   id: "id"
   like: "Like"
