--- a/config/locales/el.yml
+++ b/config/locales/el.yml
@@ -39,6 +39,8 @@ el:
     invalid_email: "Παρακαλούμε δηλώστε τουλάχιστον μια έγκυρη ηλεκτρονική διεύθυνση"
     image_upload_fail: "Δεν μπορείτε να ανεβάσετε την εικόνα. Βεβαιωθείτε ότι η εικόνα είναι κάτω από 1 MB και είναι αρχείο  .jpeg, .png, ή .gif."
     motion_closing_inputs: "Λανθασμένη ημερομηνία κλεισίματος"
+    only_group_coordinator_destroy: "Δεν μπορείτε να φύγετε από αυτή την ομάδα επειδή είστε ο μοναδικός συντονιστής. Μπορείτε να απενεργοποιήσετε την ομάδα σας από το κουτί επιλογών ή <a href='%{add_coordinator}'>να προστέσετε νέο συντονιστής</a> στην ομάδα."
+    only_group_coordinator_remove_admin: "Η ομάδα πρέπει να έχει έναν συντονιστή. Θέλετε να προσθέσετε άλλον συντονιστή στην ομάδα?"
     permission_to_invite: "Δεν έχετε το δικαιώμα να προσκαλέσετε νέα μέλη."
     position_not_updated: "Δεν μπόρεσε να ενημερωθεί η θέση."
     settings_not_updated: "Οι ρυθμίσεις σας δεν ενημερώθηκαν."
@@ -176,7 +178,8 @@ el:
   sign_out: "Έξοδος"
   sign_in: "Είσοδος"
   tagline: "Δημιουργώντας έναν κόσμο όπου είναι εύκολο για τον καθένα να συμμετάσχει σε αποφάσεις που τους αφορούν."
-  or_sign_in_html: "Εάν έχετε ήδη λογαριασμό,  <a href='%{link}'>εισέλθετε εδώ</a>."
+  or_sign_in_html: "Έχετε ήδη Loomio λογαριασμό? <a href='%{link}'>εισέλθετε εδώ</a>"
+  or_link_account_html: "Έχετε ήδη Loomio λογαριασμό? <a href='%{link}'>Συνδέστε τον</a>"
   click_to_dismiss: "Πατήστε εδώ για απορίψετε αυτό το μήνυμα."
   generic_confirm: "Είστε σίγουροι?"
   discussion_helper_text:
@@ -253,6 +256,7 @@ el:
   start_a_discussion: "Ξεκινήστε μια συζήτηση"
   group_description: "Περιγραφή ομάδας"
   edit_group_description: "Επεξεργασία περιγραφής ομάδας"
+  group_subscription: "Συνδρομή Ομάδας"
   group_request:
     confirmation:
       title: Σχεδόν τελειώσατε! Ελέγξτε το ηλεκτρονικό ταχυδρομείο σας.
@@ -436,6 +440,8 @@ el:
     submit: Συνεισφορά
     tooltip: Μάθετε σχετικά με το μοντέλο χρηματοδότησης της κοινωνίας μας
     thought_about_contributing: Η ευκαιρία για να συμμετάσχετε
+    thought_about_contributing_description: "Το Loomio είναι μια συλλογική κοινωνική επιχείρηση που εργάζεται ώστε να είναι εύκολο για τον καθένα να συμμετέχει στη λήψη αποφάσεων που τον αφορούν.\n\nΤα χρήματα δεν θα πρέπει να αποτελούν εμπόδιο για τη συλλογική λήψη αποφάσεων. Το Loomio χρηματοδοτείται από τις συνεισφορές από την κοινότητά μας των χρηστών, καθώς και από συνδρομές που καταβάλλονται από τις επίσημες οργανώσεις που το χρησιμοποιούν. \n\nΗ συνεισφορά σας σημαίνει\
+      \ ότι μπορούμε να κρατήσουμε το Loomio ανεξάρτητο, χωρίς διαφημίσεις, και δωρεάν διαθέσιμο στις ομάδες που κάνουν μεγάλα πράγματα στις κοινωνίες τους.\n\nΕυχαριστούμε που το κάνετε αυτό πραγματικότητα! \n"
     thank_you_title: Ευχαριστούμε για την συνεισφορά σας στο Loomio!
     thank_you_body: |
       Η συνεισφορά σας μας βοηθάει να παραδώσουμε εύκολα συλλογική λήψη αποφάσεων στον κόσμο.
@@ -446,6 +452,12 @@ el:
 
       <a href='https://www.loomio.org/groups/3'>Πήγαινε με στην κοινότητα του Loomio</a>
     making_a_donation: Κάνοντας μια δωρεά
+    making_a_donation_description: |
+      Το Loomio είναι ένα μια συλλογική κοινωνική επιχείρηση που εργάζεται ώστε να κάνει εύκολο για οποιονδήποτε να συμμετάσχει σε αποφάσεις που τον αφορούν.
+
+      Η συνεισφορά σας σημαίνει ότι μπορούμε να κρατήσουμε το Loomio ανεξάρτητο, δωρεάν από διαφημίσεις, και δωρεάν διαθέσιμο στις ομάδες να κάνουν μεγάλα πράγματα στις κοινότητες τους.
+
+      Ευχαριστούμε που το κάνετε αυτό δυνατόν!
   resend_confirmation: "Επαναποστολή οδηγιών επιβεβαιώσης"
   new_password: "Νέος Κωδικός"
   confirm_new_password: "Επιβεβαίωση νέου κωδικού"
@@ -462,20 +474,20 @@ el:
   forgot_your_password: "Ξεχάσατε τον κωδικό σας?"
   confirmation_not_received: "Δεν λάβατε οδηγίες επιβεβαίωσης?"
   unlock_not_received: "Δεν λάβατε οδηγίες ξεκλειδώματος?"
+  inactive_html: "Συγνώμη, αυτός ο λογαριασμός είναι απενεργοποιημένος. Εάν έχετε ερωτήσεις παρακαλούμε <a href='%{path_to_contact}'>επικοινωνήστε μαζί μας</a>."
+  create_an_account: 'Δημιουργήστε ένα λογαριασμό'
   join_group:
-    header: "Ο/Η %{who} σας προσκάλεσε για να συμμετάσχετε στην ομάδα %{group_name}"
-    sign_up_intro: "Θα χρειαστείτε να δημιουργήσετε λογαριασμό για να συμμετάσχετε στην ομάδα."
-    sign_in_intro: "Θα χρειαστείτε να εισέλθετε για να συμμετάσχετε στην ομάδα."
+    log_in: "Εισέλθετε για να συμμετάσχετε στο/στη/στους %{group_name}"
+    create_account: "Δημιουργήστε ένα λογαριασμό"
   start_group:
-    header: "Καλώς Ήρθατε στο Loomio"
-    sign_up_intro: "Θα χρειαστεί να δημιουργήσετε ένα νέο λογαριασμό πριν δημιουργήσετε την ομάδα σας:"
-    sign_in_intro: "Θα χρειαστεί να εισέλθετε πριν δημιουργήσετε την ομάδα σας:"
+    log_in: "Συνδεθείτε για να ρυθμίσετε την ομάδα σας"
+    create_account: "Δημιουργήστε ένα λογαριασμό"
   invitation:
     no_invitations_left: "Συγνώμη δεν έχουν απομείνει άλλες προσκλήσεις"
     no_invitations_left_get_more: "Παρακαλούμε στείλτε ηλεκτρονικό μήνυμα στο contact@loomio.org και θα δούμε τι μπορούμε να κάνουμε"
     invitation_not_found: 'Δεν μπόρεσα να βρω πρόσκληση με αυτό το διακριτικό. Παρακαλούμε ζητήστε νέα πρόσκληση από τον αποστολέα.'
     invitation_cancelled: 'Αυτή η πρόσκληση έχει ακυρωθεί. Παρακαλούμε επικοινωνήστε με τον αποστολέα της πρόσκλησης εάν πιστεύετε πως αυτό έγινε από λάθος.'
-    invitation_already_used: 'Αυτή η πρόσκληση έχει χρησιμοποιηθεί ήδη. Παρακαλούμε συνδεθείτε για να συνεχίσετε στην ομάδα.'
+    invitation_already_used: 'Αυτή η πρόσκληση έχει χρησιμοποιηθεί ήδη. Παρακαλούμε συνδεθείτε για να συνεχίσετε στην ομάδα σας.'
     recipients: "Βάλτε τις ηλεκτρονικές διευθύνσεις, χωρισμένες από κόμμα:"
     invitees_placeholder: "Όνομα Χρήστη <user1@example.com>, user2@example.com"
     subject: "Παρακαλούμε γίνετε μέλος στη νέα Loomio ομάδα μας, %{group}"
@@ -616,14 +628,14 @@ el:
     view_comment: "Πατήστε εδώ για να δείτε το σχόλιο στο Loomio"
     view_discussion: "Πατήστε εδώ για να δείτε αυτή την συζήτηση"
     view_group: "Πατήστε εδώ για να δείτε την ομάδα στο Loomio"
-    view_proposal: "Πατήστε εδώ για να δείτε αυτή την πρόταση στο Loomio"
+    view_proposal: "Εμφάνιση αυτής της πρότασης στο Loomio"
     create_discussion:
       intro: "Ο/Η %{who} ξεκίνησε μια νέα συζήτηση στην ομάδα %{which_group}:"
       subject: "Νέα Συζήτηση - %{which}"
     create_proposal:
       intro: "Μια νέα πρόταση δημιουργήθηκε σε ομάδα του Loomio που ανήκετε."
       closes_in: "Κλείνει σε"
-      subject: "Νέα πρόταση -  %{which}"
+      subject: "Νέα πρόταση: %{which}"
     daily_activity:
       heading: "Η δραστηριότητα σας στο Loomio"
       intro: "Σας δείχνει τι συμβαίνει στις ομάδες σας στο Loomio τις τελευταίες 24 ώρες"
@@ -648,6 +660,8 @@ el:
       intro: "Έχεις αναφερθεί σε μια συζήτηση με τίτλο:"
       said: "%{comment_author} είπε:"
       subject: "%{who} σε ανέφερε στην Ομάδα %{which} στο Loomio"
+    new_motion_created:
+      context: "%{author} δημιούργησε μια πρόταση στο %{group_full_name}:"
     proposal_closed:
       intro: 'Η πρόταση σας "%{proposal_name}" έχει κλείσει.'
       specify_outcome: "Παρακαλούμε πατήστε εδώ για να καθορίσετε το αποτέλεσμα"
@@ -656,8 +670,11 @@ el:
       intro: "Μια πρόταση που σε διευκολύνει έχει μπλοκαριστεί."
       subject: "Πρόταση μπλοκαρίστηκε  - %{which}"
     proposal_closing_soon:
+      closes_on: "Κλείνει στις"
+      closes_at: "Κλείνει στις"
       closes_in: "Κλείνει σε"
-      subject: "Η πρόταση κλείνει σύντομα: %{which}"
+      closing_in_24_hours: "Κλείνει σε 24 ώρες"
+      headline: "Η πρόταση του/της %{author} στο %{group} κλείνει σύντομα:"
       summary: "Σύνοψη"
     to_join_group:
       subject: "Ο/Η %{member} σας προσκάλεσε για να συμμετάσχετε στην ομάδα %{group_name} στο Loomio"
